syntax = "proto3";

package openstatus.monitor.v1;

import "openstatus/monitor/v1/dns_monitor.proto";
import "openstatus/monitor/v1/http_monitor.proto";
import "openstatus/monitor/v1/tcp_monitor.proto";

option go_package = "github.com/openstatushq/openstatus/packages/proto/openstatus/monitor/v1;monitorv1";

// MonitorStatus represents the operational status of a monitor.
enum MonitorStatus {
  // MONITOR_STATUS_UNSPECIFIED indicates an unknown status.
  MONITOR_STATUS_UNSPECIFIED = 0;
  // MONITOR_STATUS_ACTIVE indicates the monitor is actively checking.
  MONITOR_STATUS_ACTIVE = 1;
  // MONITOR_STATUS_PAUSED indicates the monitor is paused.
  MONITOR_STATUS_PAUSED = 2;
  // MONITOR_STATUS_ERROR indicates the monitor is in an error state.
  MONITOR_STATUS_ERROR = 3;
}


// MonitorConfig represents the type-specific configuration for a monitor.
message MonitorConfig {
  oneof config {
    // HTTP monitor configuration.
    HTTPMonitor http = 1;
    // TCP monitor configuration.
    TCPMonitor tcp = 2;
    // DNS monitor configuration.
    DNSMonitor dns = 3;
  }
}
